internal/utils/testdata/backendtrafficpolicy_httpupgrade.strategicmerge.out.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: patched
spec:
  connection:
    bufferLimit: 100M
  httpUpgrade:
  - type: websocket
  timeout:
    http:
      connectionIdleTimeout: 16s
      maxConnectionDuration: 17s
    tcp:
      connectTimeout: 15s
status:
  ancestors: null
